[package]
name = "bevy_demo"
version = "0.1.0"
edition = "2024"

#[profile.dev]
#opt-level = 1
#
#[profile.dev.package."*"]
#opt-level = 3

[dependencies]
bevy = { version = "0.17", features = ["debug", "gif", "jpeg", "png", "serialize", "webp"] }
itertools = "0.14.0"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.43"
