[package]
name = "bevy_demo"
version = "0.1.0"
edition = "2024"

#[profile.dev]
#opt-level = 1
#
#[profile.dev.package."*"]
#opt-level = 3

[dependencies]
bevy = { version = "0.18", features = ["debug", "gif", "jpeg", "png", "serialize", "webp"] }
#derive_more = { version = "2.1.1", features = ["as_ref"] }
itertools = "0.14"
rand = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "1.1"
tracing = "0.1"
